# qa_guru_extra_lesson_decorator

./: pyproject.toml
project_tests/models/: apps.py
project_tests/models/pages/: dashboard.py  sign_up_form.py
project_tests/utils/: allure.py  functions.py
tests/: conftest.py  test_sign_up_form_using_log_functions.py
